this video about dynamic style, getattribute, setattribute,innertext,innerhtml

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </section>
         <section class="fruits_container">
-            <h1 id="fruits_title">Fruits I like</h1>
+            <h1 id="fruits_title" class="anik arpon joy">Fruits I like</h1>
             <ul>
                 <li>Apple</li>
                 <li>Banana</li>
@@ -83,7 +83,7 @@
         // getElementById
 
         const fruitsTitle = document.getElementById('fruits_title');
-        fruitsTitle.innerText = 'Fruits changed by js'
+        // fruitsTitle.innerText = 'Fruits changed by js'
 
 
         // -------------------------------------
@@ -106,7 +106,7 @@
         // querySelector
         
         const h1 = document.querySelector('#fruits_title');
-        console.log(h1);
+        // console.log(h1);
 
 
 
@@ -119,7 +119,7 @@
         const someLi = document.querySelectorAll('.fruits_container li');
         // console.log(someLi);
         for(const li of someLi){
-            console.log(li.innerText);
+            // console.log(li.innerText);
         }
 
     </script>
