this video about nodelist, htmlcollection, parentnode,childnodes,createelement etc

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li>Carrot</li>
             </ul>
         </section>
-        <section>
+        <section id="places_container" class="text_big">
             <h1 id="places_title">places I like to visit</h1>
             <ul>
                 <li class="important_places">Soondorban</li>
@@ -124,6 +124,7 @@
 
     </script>
     <script src="js/dom.js"></script>
+    <script src="js/stylelnjs.js"></script>
 </body>
 
 </html>
