this video about how to create html elements using javascript and appendchild

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>welcome to my DOM</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor natus voluptate repudiandae recusandae dolorem voluptatibus, omnis eius hic. Quos nulla iste nam non atque recusandae porro magni, accusamus doloremque accusantium!</p>
     </header>
-    <main>
+    <main id="main_container">
         <section>
             <h1>My Awesome DOM de baba</h1>
             <ul>
@@ -44,7 +44,7 @@
         </section>
         <section id="places_container" class="text_big">
             <h1 id="places_title">places I like to visit</h1>
-            <ul>
+            <ul id="places_list">
                 <li class="important_places">Soondorban</li>
                 <li class="important_places">Bandorban</li>
                 <li class="important_places">Katban</li>
@@ -124,6 +124,7 @@
 
     </script>
     <script src="js/dom.js"></script>
+    <script src="js/appen.js"></script>
     <script src="js/stylelnjs.js"></script>
 </body>
 
